# Simple-CX16-Rust-Example

./: .gitattributes  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build_sdk.sh
src/: add.S  cx16.rs  main.rs
