[package]
name = "rust-mos-test"
authors = ["Trevor Berninger <baladashman@protonmail.com>"]
license = "MIT"
repository = "https://gitlab.com/Delamare/simple-cx16-rust-example"
version = "0.1.0"
edition = "2021"

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
debug = 2

[patch.crates-io]
ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
ufmt-write = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}

[dependencies]
ufmt-stdio = "0"

[build-dependencies]
bindgen = "0.65.1"
